--- a/知识点/面试题.md
+++ b/知识点/面试题.md
@@ -69,9 +69,54 @@ css3动画：[@Keyframes](https://github.com/Keyframes)
 * (>)后代选择器
 
 
-#### 介绍防抖节流的原理、区别以及应用
-防抖：
+
+
+
+#### **介绍防抖节流的原理、区别以及应用**
+
+##### 防抖
+
 * 原理：事件被触发n秒之后再执行回调，如果在这n秒内又被处罚，则重新计时
+
 * 适用场景：
-+ 按钮提交场景：防止多次按钮提交，只执行最后一次
-+ 搜索框联想场景：防止联想发送请求，只发送最后一次输入
+  + 按钮提交场景：防止多次按钮提交，只执行最后一次
+  + 搜索框联想场景：防止联想发送请求，只发送最后一次输入
+
+##### 节流
+
+* 原理：在规定单位时间内，只能触发一次函数。如果单位时间内多次触发，只有一次生效。
+* 适用场景
+  + 拖拽场景：固定时间内只执行一次，防止超高频次触发位置变动
+  + 缩放场景：监控浏览器resize
+* 使用时间戳实现
+  + 使用时间戳，触发事件时，取出当前的时间戳，然后减去之前的时间戳。如果大于设置的周期，就执行，并更新时间戳。如果小于，就不执行。
+* 定时器实现
+  + 触发事件的时候，设定一个定时器，再触发时，如果定时器存在就不执行，直到定时完毕，执行函数，清空定时器，设置下一个定时器。
+
+
+
+#### 闭包
+
+函数执行后返回结果是一个内部函数，并且被外部变量所引用，如果内部函数持有被执行函数作用域的变量，就形成了闭包。闭包可以读取函数中的变量，也可以把函数中的变量存储在内存中，保护变量不被污染。
+
+不恰当使用会有内存泄漏，需要及时释放（对内层函数对象变量赋值为null。
+
+
+
+### 前端安全
+
+1. XSS：跨站脚本攻击（把可执行代码注入网页中
+
+   + 存储型：存储在数据库中
+   + 反射性：构造在特殊的URL中
+   + DOM型：通过URL传递参数的功能实现，由浏览器完成，属于前端JS自身的安全漏洞
+
+   解决方案：
+
+   1. 对数据进行严格的输出编码，避免拼接html
+   2. 输入验证，对一些常见的数字进行校验判断
+   3. 验证码
+   4. 开启浏览器XSS防御，禁止JS读取某些敏感的cookie
+
+2. 
+
