--- a/知识点/面试题.md
+++ b/知识点/面试题.md
@@ -1,9 +1,9 @@
 #### 页面导入样式时，使用link和@import有什么区别
 
 1.  从属关系： link是html标签，而@import是css提供的语法规则。
-2. 加载顺序：link是跟随页面一起加载的，@import引用的css在页面加载完之后才会加载
-3. 兼容性：link是html标签，没有兼容问题；@import在CSS2.1之后才被引入，低版本的浏览器不能被识别
-4. DOM可控性：link可以通过JS操作DOM来改变样式，而@import不可以。
+2.  加载顺序：link是跟随页面一起加载的，@import引用的css在页面加载完之后才会加载
+3.  兼容性：link是html标签，没有兼容问题；@import在CSS2.1之后才被引入，低版本的浏览器不能被识别
+4.  DOM可控性：link可以通过JS操作DOM来改变样式，而@import不可以。
 
 
 
@@ -44,6 +44,13 @@ css3动画：[@Keyframes](https://github.com/Keyframes)
 自定义动画：animation
 弹性布局：flex
 多媒体查询：[@media](https://github.com/media)
+
+
+
+#### 相对定位和绝对定位
+
+* relative：相对于原来位置移动，元素设置此属性之后仍然处于文档流中，不影响其他元素的布局
+* absolute：元素会脱离文档流，如果设置偏移，会影响其他元素的位置定位。（在父元素没有设置相对定位或绝对定位的情况下，元素相对于根元素定位。如果父元素设置了相对定位或绝对定位，元素会相对于自己最近的设置了相对或绝对定位的父元素进行定位。
 
 
 
@@ -102,6 +109,36 @@ css3动画：[@Keyframes](https://github.com/Keyframes)
 不恰当使用会有内存泄漏，需要及时释放（对内层函数对象变量赋值为null。
 
 
+
+#### CDN网络
+
+内容分发网络，网站预先把内容分发至全国各地的加速节点。这样用户可以就近获取所需内容，避免网络拥堵、地域、运营商等因素带来的访问延迟问题，有效提升下载速度、降低响应时间，提供流畅的用户体验。
+
+> CDN技术消除了不同运营商之间互联的瓶颈造成的影响，实现了跨运营商的网络加速，保证不同网络中的用户都可以得到良好的访问质量
+>
+> 广泛分布的CDN节点加上节点之间的智能冗余机制，可以有效地预防黑客入侵以及降低各种攻击对网站的影响，保证较好的服务质量。
+
+##### 基本工作过程
+
+* 用户点击网站上的URL内容，经过本地DNS解析，如果本地DNS服务器没有相应域名的缓存，则把域名的解析权交给CNAME指向的CDN专用DNS服务器
+* CDN的DNS服务器把CDN的全局负载均衡设备IP地址返回给用户
+* 用户向CDN的全局负载均衡设备发起URL访问请求
+* 全局负载均衡设备根据用户的IP和请求的URL，选择以太用户所属区域的区域负载均衡设备，把请求转发到此设备上
+* 区域负载均衡设备（根据用户IP/URL/边缘节点的负载情况）找到一个最优的缓存服务器节点，把IP地址返回给全局负载均衡设备
+* 全局负载均衡设备把服务器的IP地址返回给用户
+* 用户向服务器发送请求，服务器响应。如果服务器上没有用户想要的内容，那么服务器就要向上一级缓存服务器请求内容，直到获取内容。
+
+##### 对比（传统网站响应过程
+
+* 用户在浏览器中输入访问的网站域名
+* 浏览器向本地DNS服务器请求解析
+* 如果DNS服务器中缓存有解析结果，则直接响应用户的请求
+* 如果没有解析结果，则以迭代的方式向整个DNS请求解析，获得应答之后反馈给浏览器
+* 浏览器得到域名解析结果，也就是域名对应的服务设备的IP地址
+* 浏览器获取IP地址后，根据标准的TCP握手流程建立TCP连接
+* 浏览器向服务器发送HTTP请求
+* 服务器把请求内容传给浏览器
+* TCP挥手，断开连接
 
 ### 前端安全
 
