--- a/知识点/面试题.md
+++ b/知识点/面试题.md
@@ -1,9 +1,9 @@
 #### 页面导入样式时，使用link和@import有什么区别
 
 1.  从属关系： link是html标签，而@import是css提供的语法规则。
-2.  加载顺序：link是跟随页面一起加载的，@import引用的css在页面加载完之后才会加载
-3.  兼容性：link是html标签，没有兼容问题；@import在CSS2.1之后才被引入，低版本的浏览器不能被识别
-4.  DOM可控性：link可以通过JS操作DOM来改变样式，而@import不可以。
+2. 加载顺序：link是跟随页面一起加载的，@import引用的css在页面加载完之后才会加载
+3. 兼容性：link是html标签，没有兼容问题；@import在CSS2.1之后才被引入，低版本的浏览器不能被识别
+4. DOM可控性：link可以通过JS操作DOM来改变样式，而@import不可以。
 
 
 
@@ -76,6 +76,328 @@ css3动画：[@Keyframes](https://github.com/Keyframes)
 * (>)后代选择器
 
 
+
+#### 原生CSS实现局部滚动
+
+```CSS
+  /* 设置局部滚动
+  1. 确定高度
+  2. 设置overflow-y: scroll */
+  .content {
+    height: 150px;
+    background-color: aquamarine;
+    /* overflow: hidden自动被设置; */
+    overflow-y: scroll;
+  }
+```
+
+
+
+#### var 和 let 的区别
+
+ES6新增的重要关键字，let声明的变量只在let命令所在的代码块内有效，const声明一个只读的常量，一旦声明，常量的值就不能改变。
+
+##### 全局变量
+
+```javascript
+var carName = 'Volvo';
+// 在这里可以使用carName变量
+function myFunc() {
+    // 在这里也可以使用carName变量
+}
+```
+
+全局变量在JS程序的任何地方都可以使用
+
+##### 局部变量
+
+```javascript
+// 这里不可以使用carName变量
+function myFunc() {
+    var carName = 'Volvo';
+    // 这里可以使用carName变量
+}
+// 这里不可以使用carName变量
+```
+
+##### JS的块级作用域
+
+使用var声明的变量不具备块级作用域的特性，在{}外能被访问到。
+
+let声明的变量只能在代码块{}内有效
+
+```javascript
+{
+    var x = 2;
+}
+// 这里可以使用x变量
+{
+    let y = 2;
+}
+// 这里不能使用y变量
+```
+
+##### 重新定义变量
+
+var可能会带来问题：在块中重新声明变量也会重新声明块外的变量
+
+```javascript
+var x = 10;
+// 这里输出x为10
+{
+    var x = 2;
+    // 这里输出x为2
+}
+// 这里输出x为2
+```
+
+使用let可以解决这个问题
+
+```javascript
+var x = 10;
+// 这里输出x为10
+{
+    let x = 2;
+    // 这里输出x为2
+}
+// 这里输出x为10
+```
+
+在函数体内使用var和let声明变量类似，作用域都是局部的。
+
+在HTML环境中，全局作用域针对window对象。
+
+使用var声明的全局作用域变量属于window对象，而let声明的不属于
+
+```javascript
+var carName = 'Volvo';
+// 可以使用window.carName 访问
+let name = 'xinyi';
+// 不可以使用window.name访问
+```
+
+##### 重置变量
+
+使用var声明的变量在任何地方都可以修改，而在相同的作用域或者块级作用域中，不能用let来重置var声明的变量；在相同的作用域或者块级作用域中，不能用let来重置let。
+
+```javascript
+var x = 2;
+// now x=2
+var x = 3;
+// now x=3
+
+var x = 2; // valid
+let x = 3; // invalid
+
+{
+    var x = 4; // valid
+    let x = 5; // invalid
+}
+
+let x = 2; // valid
+let x = 3; // invalid
+
+{
+    let x = 4;// valid
+    let x = 5;// invalid
+}
+```
+
+在相同的作用域或块级作用域中，不能用var来重置let声明的变量
+
+```javascript
+let x = 2; //√
+var x = 3; //×
+
+{
+    let x = 4; //√
+    var x = 5; //×
+}
+```
+
+let关键字在不同作用域或者不同块级作用域中可以重新声明赋值
+
+```javascript
+let x = 2;
+{
+    let x = 3;
+}
+
+{
+    let x = 4;
+}
+```
+
+##### 变量提升
+
+先使用后声明： var可以而let不可以
+
+#### const
+
+声明一个或多个变量，声明时必须初始化，初始化后值不可以修改。
+
+const定义常量和let定义变量类似：
+
+* 两者都是块级作用域
+* 都不能和他所在作用域内其他变量或函数拥有相同的名称
+
+区别：
+
+* const声明的常量必须初始化，而let声明的变量不需要。
+* const声明的常量不能通过赋值修改，不能再次声明，而let定义的变量值可以。
+
+const本质：const定义的变量并非常量，并非不可变，它定义一个常量引用一个值。使用const定义的对象或者函数，其实是可以变的。
+
+```javascript
+// 创建常量对象
+const car = {
+    type: 'Fiat',
+    model: '500',
+    color: 'white'
+};
+//修改、增加属性
+car.color = 'red';
+car.owner = 'Johnson';
+
+//但不可重新赋值，下面的代码是错误的
+car = {
+    type: 'Volvo',
+    model: 'EX60',
+    color: 'red'
+}
+```
+
+
+
+#### native修饰符
+
+* 需要监听一个**组件**的原生事件时，必须给对应事件加上**.native**修饰符
+
+
+
+#### 监听图片加载完成
+
+* 原生的JS： img.onload = function(){}
+* Vue中监听： @load='function'
+
+
+
+#### tabControl的吸顶效果的完成
+
+* 获取tabControl的offsetTop属性
+* 如果直接在mounted里获取，那么值是不对的（有部分图片高度没有加载
+* 必须对图片加载进行一个监听，当图片加载完成后，发出事件，获取正确的值
+* 补充：
+  *  图片加载完成的事件不需要加载多次
+  * 使用一个变量对加载状态进行记录
+
+
+
+#### 如何将 **时间戳** 转成**时间格式化字符串**
+
+1. 将时间戳转成Date对象
+
+2. 将date进行格式化，转成对应的字符串
+
+   ```javascript
+   var time = 153569719 //单位毫秒
+   const date = new Date(time*1000)
+   // 转换
+   fmt = date.getYear() + date.getMonth() + 1
+   fmt.format(date, 'yyyy-MM-dd hh:mm:ss')
+   ```
+
+   
+
+
+
+#### 事件总线(关系较远的组件之间通信)
+
+类似于Vuex，但不用于管理状态，用于管理事件
+
+```javascript
+// 这里的$bus需要自己在原型里赋值
+Vue.prototype.$bus = new Vue({})
+// 发射事件，注意这里的方法需要加$
+this.$bus.$emit('name')
+// 监听事件
+this.$but.$on('name', () => {
+    
+})
+```
+
+### 事件循环
+
+同步和异步任务分别进入不同的执行环境，同步的进入主线程，异步的进入任务队列。主线程内的任务执行完毕为空时，回去任务队列读取对应的任务，推入主线程执行。这个过程就是事件循环。
+
+![preview](https://pic4.zhimg.com/v2-1337770fcc29d10325ee4eb127496fff_r.jpg)
+
+事件循环中，每进行一次循环的操作称为tick，关键步骤为
+
+1. 在此次tick中选择最先进入队列的任务（oldest task），如果有就执行
+2. 检查是否存在**Microtasks**，如果存在则不停执行，直到清空Microtask queue
+3. 更新render
+4. 主线程重复上述步骤
+
+![preview](https://pic3.zhimg.com/v2-a38ad24f9109e1a4cb7b49cc1b90cafe_r.jpg)
+
+##### 什么是Microtask？
+
+task分为两大类，一类是Macro Task（宏任务），一类是Micro Task（微任务），每个宏任务结束后，都要清空所有的微任务。
+
+> 宏任务主要包含：script( 整体代码)、setTimeout、setInterval、I/O、UI 交互事件、setImmediate(Node.js 环境)
+>
+> 微任务主要包含：Promise、MutaionObserver、process.nextTick(Node.js 环境)
+
+##### 举例
+
+```javascript
+console.log('script start');
+
+setTimeout(function() {
+  console.log('setTimeout');
+}, 0);
+
+Promise.resolve().then(function() {
+  console.log('promise1');
+}).then(function() {
+  console.log('promise2');
+});
+
+console.log('script end');
+```
+
+> 整体script作为第一个宏任务进入主线程，打印script start
+>
+> 遇到setTimeout，回调函数被分发到宏任务的Event Queue中
+>
+> 遇到Promise，then函数被分到微任务的Event Queue中，计为then1，之后又遇到一个then，同样被分到微任务的Event Queue中，计为then2
+>
+> 输出script end
+
+##### 所以输出的顺序为：
+
+##### script start, script end, promise1, promise2, setTimeout
+
+（new Promise内部的代码会立即执行，但then的会被放到微任务中去）
+
+##### JS是一门单线程语言，异步操作都是放到事件循环队列里，等待主执行栈来执行的，没有专门的异步执行线程。
+
+
+
+#### setTimeout的执行顺序
+
+setTimeout内的部分在下一次事件循环开始前才执行。
+
+```javascript
+console.log('第一个执行')
+
+setTimeout(() => {
+    console.log('最后执行')
+}, 0)
+
+console.log('第二个执行')
+```
 
 
 
