--- a/知识点/异步加载.md
+++ b/知识点/异步加载.md
@@ -1,3 +1,132 @@
+#### 什么是异步
+
+代码被分为两段执行，第一段执行完毕之后，需要等一个返回结果，在这个期间内，程序执行其他文件。等做好了准备，再继续执行第二段代码。
+
+#### 异步的实现
+
+##### 回调函数
+
+把任务的第二段直接写在函数里。
+
+```javascript
+fs.readFile('/etc/passwd','utf-8', function (err, data) {
+    if (err) throw err;
+    console.log(data);
+})
+```
+
+只有当读取`/ect/passwd`中的文件返回之后，才会执行对应的回调函数。
+
+> 为什么第一个参数是err，因为返回后，上下文环境结束，抛出的错误已经无法捕捉。
+
+* 缺点：容易造成回调地狱，即多个回调函数嵌套（代码纵向发展，如果一个操作需要修改，那么上层回调函数和下层回调函数都要跟着修改。
+
+##### Promise
+
+用于解决回调地狱而产生。将回调的嵌套改成链式调用。
+
+`then`方法加载回调函数，`catch`捕捉抛出的错误。
+
+* 缺点：冗余，一系列的then之后，语义变得很不清晰
+
+##### Generator
+
+```javascript
+function* asyncJob() {
+    // ... 其他代码
+    var f = yield readFile(fileA);
+    // ... 其他代码
+}
+```
+
+`asyncJob`本身是一个协程，而`yield`表示运行到此处的时候，把执行权交给其他协程。是异步两个阶段的分界线。
+
+* 优点：代码写得非常像同步操作
+
+```javascript
+function* gen(x) {
+    var y = yield x + 2;
+    return y;
+}
+// 返回的不是结果，而是指针对象
+var g = gen(1);
+g.next(); // 执行到第一段代码，此时返回的是value=(x+2), done=false(还没有执行完generator)
+// 这里是undefined的根本原因应该是y是没有被赋值的
+g.next();// 执行到第二段代码，此时没有value(没有yield关键字),done=true(generator执行完毕)
+```
+
+* 函数体内外的数据交换
+
+  * 第一个`g.next()`输出的value为3，是Generator函数把数据向外输出了
+  * 下面的`g.next(2)`输出5，是`next()`函数把数据向函数体内输入了
+
+  ```javascript
+  function* gen(x) {
+    // 此处yield已经返回(x+2)的值出去了，所以没有值赋给y了
+    // 只能赋给y None
+    var y = yield x + 2;
+    // console.log(y)
+    var z = yield y + 3;
+    return z;
+  }
+  // 返回的不是结果，而是指针对象
+  var g = gen(1);
+  console.log(g.next());
+  // 此处需要自己给第二个yield前面的y赋值
+  // 这里传入的参数可以作为上一个异步任务的返回结果，即y=2
+  console.log(g.next(2));
+  ```
+
+* 部署错误处理代码，捕获函数体外抛出的错误
+
+  ```javascript
+  function* gen2(x) {
+    try {
+      var y = yield x + 2;
+    } catch (error) {
+      console.log(error);
+    }
+    return y;
+  }
+  
+  var g2 = gen2(1);
+  console.log(g2.next());
+  console.log(g2.throw('出错啦'));
+  ```
+
+##### 异步任务的封装
+
+
+
+#### Async函数
+
+Generator函数的语法糖。
+
+* *用async替代
+* yield用await替代
+
+对比改进
+
+1. async函数只需要一行就会自动执行输出最后结果，而generator需要使用next
+
+2. 从语义上来理解，`async`和`await`的语义更加清晰
+
+3. 返回值是Promise
+
+   > 进一步来说，async函数可以看做是多个异步操作包装成一个Promise对象，而await就是内部then命令的语法糖
+
+对于`async`返回的Promise对象，只有函数体里的所有await后面的Promise对象都执行完之后，才会发生状态改变。**只有`async`内部的异步操作全部完成，才会执行then指定的回调函数**
+
+#### 各个异步处理方法的比较
+
+* callback：初步解决异步问题，但是有回调地狱，而且不能trycatch也不能return
+
+* promise：解决了回调地狱的问题，但是自身有很多API，语义性不明显。无法取消
+* Generator：最大的问题是需要有一个自动执行器，而且必须保证yield后面返回的是Promise对象
+* async：最简洁，最符合语义。封装自动执行，不暴露给用户，代码量最少。但是多个await之间如果没有依赖性，反而效率会降低，不如使用Promise.all()
+
+
+
 默认情况下JS是同步加载的，即优先加载JS，只有当JS加载完，DOM和css才开始加载。某些时候我们需要JS异步加载，可以通过以下方式来设置
 
 1. defer：
