add some interesting css SE

--- a/知识点/计网/跨域问题.md
+++ b/知识点/计网/跨域问题.md
@@ -44,6 +44,6 @@
 1. JSONP
    * 核心思想： 浏览器的script、img、iframe标签不受同源策略限制，所以通过script标签引入一个js文件，这个js文件加载成功后会执行我们在url参数中指定的callback函数，并把我们需要的json数据作为参数传入。在服务器端，当req.params参数中带callback属性时，则把数据作为callback的参数执行，拼接成一个字符串后返回。
 2. CORS
-   * 核心思想：在服务器端检查请求头部的origin，决定请求失败还是成功。在服务端设置response heaser响应头中的access-control-allow-origin为对应的域名。
+   * 核心思想：在服务器端检查请求头部的origin，决定请求失败还是成功。在服务端设置response header响应头中的access-control-allow-origin为对应的域名。
 3. 
 
